--- a/app/javascript/snap/styles/components/_search-results.scss
+++ b/app/javascript/snap/styles/components/_search-results.scss
@@ -11,7 +11,7 @@
         .card-top-container {
             position: relative;
             height: auto !important;
-            overflow: hidden;
+            //overflow: hidden;
             background-color: #fff;
             z-index: 2;
         }
@@ -20,7 +20,7 @@
             position: absolute;
             filter: blur(25px);
             transform: scale(1.1);
-            height: 100%;
+            height: 100vh;
             img {
                 height: 100%;
                 z-index: 100;
